Fixed navbar brand logo being pushed out of place

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,10 @@ body {
     color: #868F9B;
 }
 
-.navbar-brand-title {
+.navbar-brand {
     font-family: 'fp-1549', sans-serif;
     color: #d9d9d9;
+    padding-top: 0;
 }
 
 h1 {
